# pystematic-torch

./: .gitignore  .readthedocs.yaml  Dockerfile  README.rst  pyproject.toml
.github/workflows/: publish.yaml  release.yaml  test.yaml
docs/: requirements.txt
docs/source/: apidoc.rst  conf.py  index.rst
pystematic_torch/: context.py  torch_plugin.py  torchutil.py
tests/: test_pystematic_torch.py
tests/resources/: checkpoint-1.pt
