[tool.poetry]
name = "pystematic-torch"
version = "0.1.0"
description = "Pystematic plugin for running pytorch experiments."
repository = "https://github.com/evalldor/pystematic-torch"
documentation = ""
license = "MIT"
readme = "README.rst"
authors = ["E.Valldor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.62.1"
tensorboardX = "^2.4"
numpy = "^1.21.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
matplotlib = "^3.4.3"
pystematic = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.plugins."pystematic.plugins"]
"pystematic-torch" = "pystematic_torch:TorchPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
