[tool.poetry]
name = "pystematic-torch"
version = "1.0.0"
description = "Pystematic plugin for running pytorch experiments."
repository = "https://github.com/evalldor/pystematic-torch"
documentation = ""
license = "MIT"
readme = "README.rst"
authors = ["E.Valldor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.6.2"
tqdm = "^4.62.1"
tensorboardX = "^2.4"
torch = "^1.8"
matplotlib = "^3.0"
pystematic = "^1.0.0"
importlib-metadata = "^4.6.4"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.plugins."pystematic.plugins"]
"pystematic-torch" = "pystematic_torch:TorchPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
